--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -35,7 +35,7 @@ $pink: #f91791;
     position: absolute;
     display: block;
     left: 50%;
-    top: 0;
+    top: 86px;
     margin-bottom: 50px;
     width: 3px;
     height: 5px;
