--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2969,11 +2969,12 @@ body>nav.hide-it {
 		}
 
 		.skills li{
-			width: 49%;
+			width: 48%;
 		}
 		.skillsGrid li h4 {
     margin-top: -3px;
-    font-size: 16px;
+    margin-left: 10px;
+    font-size: 12px;
 
 	}
 	.skillsGrid li.widerLI {
