--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -24,351 +24,655 @@
 }
 
 .optimism:hover i:nth-of-type(1) {
-  transform: translate3d(-70px, -63px, 0) rotate(247deg);
-  background: #37ff00;
+  transform: translate3d(-66px, -67px, 0) rotate(103deg);
+  background: #00ff26;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(2) {
-  transform: translate3d(-14px, -93px, 0) rotate(326deg);
-  background: #003cff;
+  transform: translate3d(-83px, -79px, 0) rotate(165deg);
+  background: #00eeff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(3) {
-  transform: translate3d(-85px, -91px, 0) rotate(93deg);
+  transform: translate3d(20px, -79px, 0) rotate(316deg);
   background: #00e1ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(4) {
-  transform: translate3d(50px, -72px, 0) rotate(300deg);
-  background: #ff0037;
+  transform: translate3d(17px, -55px, 0) rotate(348deg);
+  background: #ff004d;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(5) {
-  transform: translate3d(-11px, -58px, 0) rotate(279deg);
-  background: #ff0044;
+  transform: translate3d(-60px, -73px, 0) rotate(259deg);
+  background: #00d0ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(6) {
-  transform: translate3d(74px, -83px, 0) rotate(219deg);
-  background: #008cff;
+  transform: translate3d(5px, -71px, 0) rotate(193deg);
+  background: #ff00b3;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(7) {
-  transform: translate3d(-6px, -80px, 0) rotate(43deg);
-  background: #00ffc4;
+  transform: translate3d(-79px, -76px, 0) rotate(93deg);
+  background: #ff00dd;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(8) {
-  transform: translate3d(-69px, -92px, 0) rotate(154deg);
-  background: #00ff22;
+  transform: translate3d(14px, -82px, 0) rotate(331deg);
+  background: #0400ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(9) {
-  transform: translate3d(-81px, -92px, 0) rotate(25deg);
-  background: #4000ff;
+  transform: translate3d(19px, -93px, 0) rotate(342deg);
+  background: #ff00f2;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(10) {
-  transform: translate3d(-77px, -75px, 0) rotate(51deg);
-  background: #ff00d5;
+  transform: translate3d(79px, -81px, 0) rotate(282deg);
+  background: #00ffcc;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(11) {
-  transform: translate3d(80px, -53px, 0) rotate(244deg);
-  background: #7700ff;
+  transform: translate3d(-3px, -80px, 0) rotate(166deg);
+  background: #0066ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(12) {
-  transform: translate3d(-4px, -69px, 0) rotate(222deg);
-  background: #ff7700;
+  transform: translate3d(9px, -74px, 0) rotate(100deg);
+  background: #00ff88;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(13) {
-  transform: translate3d(-26px, -65px, 0) rotate(74deg);
-  background: #eeff00;
+  transform: translate3d(-64px, -97px, 0) rotate(333deg);
+  background: #ff00f7;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(14) {
-  transform: translate3d(-81px, -63px, 0) rotate(293deg);
-  background: #ff0088;
+  transform: translate3d(-50px, -59px, 0) rotate(120deg);
+  background: #00ffd5;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(15) {
-  transform: translate3d(63px, -88px, 0) rotate(160deg);
-  background: #0040ff;
+  transform: translate3d(-98px, -94px, 0) rotate(47deg);
+  background: #00eeff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(16) {
-  transform: translate3d(57px, -85px, 0) rotate(319deg);
-  background: #0037ff;
+  transform: translate3d(74px, -70px, 0) rotate(359deg);
+  background: #ff0051;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(17) {
-  transform: translate3d(15px, -80px, 0) rotate(79deg);
-  background: #00ff1a;
+  transform: translate3d(20px, -55px, 0) rotate(243deg);
+  background: #6fff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(18) {
-  transform: translate3d(-71px, -91px, 0) rotate(151deg);
-  background: #eaff00;
+  transform: translate3d(6px, -76px, 0) rotate(245deg);
+  background: #ff6600;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(19) {
-  transform: translate3d(-23px, -87px, 0) rotate(283deg);
-  background: #ff003c;
+  transform: translate3d(37px, -91px, 0) rotate(79deg);
+  background: #fff700;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(20) {
-  transform: translate3d(23px, -99px, 0) rotate(83deg);
-  background: #ff0400;
+  transform: translate3d(-7px, -77px, 0) rotate(255deg);
+  background: #dd00ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(21) {
-  transform: translate3d(70px, -63px, 0) rotate(343deg);
-  background: #9900ff;
+  transform: translate3d(-88px, -79px, 0) rotate(259deg);
+  background: #9dff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(22) {
-  transform: translate3d(-18px, -88px, 0) rotate(32deg);
-  background: #0055ff;
+  transform: translate3d(42px, -95px, 0) rotate(221deg);
+  background: #004dff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(23) {
-  transform: translate3d(79px, -84px, 0) rotate(353deg);
-  background: #00fff7;
+  transform: translate3d(-1px, -62px, 0) rotate(272deg);
+  background: #eeff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(24) {
-  transform: translate3d(73px, -82px, 0) rotate(167deg);
-  background: #73ff00;
+  transform: translate3d(68px, -59px, 0) rotate(85deg);
+  background: #ffb300;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(25) {
-  transform: translate3d(34px, -90px, 0) rotate(133deg);
-  background: #f700ff;
+  transform: translate3d(-27px, -72px, 0) rotate(257deg);
+  background: #0900ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(26) {
-  transform: translate3d(47px, -63px, 0) rotate(161deg);
-  background: #2200ff;
+  transform: translate3d(-23px, -59px, 0) rotate(141deg);
+  background: #ff2b00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(27) {
-  transform: translate3d(82px, -60px, 0) rotate(57deg);
-  background: #ff0062;
+  transform: translate3d(32px, -78px, 0) rotate(192deg);
+  background: #6aff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(28) {
-  transform: translate3d(-65px, -56px, 0) rotate(256deg);
-  background: #ff005e;
+  transform: translate3d(-24px, -76px, 0) rotate(311deg);
+  background: #00a2ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(29) {
-  transform: translate3d(40px, -96px, 0) rotate(44deg);
-  background: #ccff00;
+  transform: translate3d(-40px, -85px, 0) rotate(243deg);
+  background: #00d5ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(30) {
-  transform: translate3d(13px, -58px, 0) rotate(241deg);
-  background: #4dff00;
+  transform: translate3d(-49px, -82px, 0) rotate(298deg);
+  background: #00ffee;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(31) {
-  transform: translate3d(-72px, -89px, 0) rotate(193deg);
-  background: #ff5e00;
+  transform: translate3d(17px, -70px, 0) rotate(228deg);
+  background: #ff0026;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(32) {
-  transform: translate3d(6px, -88px, 0) rotate(113deg);
-  background: #00eaff;
+  transform: translate3d(-61px, -96px, 0) rotate(335deg);
+  background: #ff0084;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(33) {
-  transform: translate3d(-13px, -95px, 0) rotate(308deg);
-  background: #ffbb00;
+  transform: translate3d(-15px, -76px, 0) rotate(188deg);
+  background: #bbff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(34) {
-  transform: translate3d(-31px, -96px, 0) rotate(253deg);
-  background: #fbff00;
+  transform: translate3d(46px, -64px, 0) rotate(87deg);
+  background: #0088ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(35) {
-  transform: translate3d(50px, -78px, 0) rotate(284deg);
-  background: #00ff26;
+  transform: translate3d(-64px, -85px, 0) rotate(118deg);
+  background: #ff00e6;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(36) {
-  transform: translate3d(-82px, -63px, 0) rotate(155deg);
-  background: #ffea00;
+  transform: translate3d(-26px, -83px, 0) rotate(333deg);
+  background: #ff00aa;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(37) {
-  transform: translate3d(-80px, -60px, 0) rotate(208deg);
-  background: #008cff;
+  transform: translate3d(82px, -76px, 0) rotate(225deg);
+  background: #91ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(38) {
-  transform: translate3d(90px, -76px, 0) rotate(33deg);
-  background: #ff0044;
+  transform: translate3d(39px, -55px, 0) rotate(258deg);
+  background: #ffd900;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(39) {
-  transform: translate3d(-55px, -88px, 0) rotate(288deg);
-  background: #00fffb;
+  transform: translate3d(-62px, -76px, 0) rotate(246deg);
+  background: #9100ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(40) {
-  transform: translate3d(61px, -72px, 0) rotate(179deg);
-  background: cyan;
+  transform: translate3d(-9px, -51px, 0) rotate(334deg);
+  background: #2bff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(41) {
-  transform: translate3d(76px, -87px, 0) rotate(80deg);
-  background: #d000ff;
+  transform: translate3d(-42px, -55px, 0) rotate(185deg);
+  background: #ff00dd;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(42) {
-  transform: translate3d(-93px, -66px, 0) rotate(92deg);
-  background: #0055ff;
+  transform: translate3d(-90px, -75px, 0) rotate(130deg);
+  background: #0009ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(43) {
-  transform: translate3d(-64px, -52px, 0) rotate(213deg);
-  background: #ffd500;
+  transform: translate3d(-91px, -71px, 0) rotate(188deg);
+  background: #00ff91;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(44) {
-  transform: translate3d(-63px, -62px, 0) rotate(161deg);
-  background: #00ffc8;
+  transform: translate3d(6px, -87px, 0) rotate(86deg);
+  background: #0015ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(45) {
-  transform: translate3d(18px, -55px, 0) rotate(118deg);
-  background: #ff00d5;
+  transform: translate3d(43px, -59px, 0) rotate(345deg);
+  background: #3700ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(46) {
-  transform: translate3d(-27px, -96px, 0) rotate(48deg);
-  background: #ff6a00;
+  transform: translate3d(36px, -86px, 0) rotate(241deg);
+  background: #ff0077;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(47) {
-  transform: translate3d(-85px, -78px, 0) rotate(285deg);
-  background: #8400ff;
+  transform: translate3d(15px, -93px, 0) rotate(298deg);
+  background: #ff8400;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(48) {
-  transform: translate3d(21px, -81px, 0) rotate(333deg);
-  background: #ff008c;
+  transform: translate3d(-18px, -90px, 0) rotate(317deg);
+  background: #00ff6a;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(49) {
-  transform: translate3d(-12px, -59px, 0) rotate(71deg);
-  background: #0077ff;
+  transform: translate3d(-35px, -97px, 0) rotate(15deg);
+  background: #00bbff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(50) {
-  transform: translate3d(-25px, -92px, 0) rotate(205deg);
-  background: #00ff9d;
+  transform: translate3d(58px, -57px, 0) rotate(301deg);
+  background: #5100ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
+}
+
+.pop {
+  display: none;
+  position: fixed;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  height: 85%;
+  background: #fff;
+  outline: 1px solid #000;
+  z-index: 999;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.pop::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #FFF;
+  z-index: -1;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.pop::after {
+  position: fixed;
+  content: "";
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -2;
+  height: 2000px;
+  width: 100%;
+  margin-top: -340px;
+  margin-bottom: -1000px;
+  background: #000;
+  opacity: 0.7;
+}
+
+.pop > h6 {
+  padding: 50px 30px 20px 30px;
+  color: #f91791;
+  font-size: 50px;
+  text-align: center;
+}
+
+.pop > p {
+  margin: 20px;
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+}
+
+.pop > pstrong {
+  color: #f91791;
+}
+
+.pop button.gal_btn {
+  position: absolute;
+  top: 4%;
+  right: 4%;
+  cursor: pointer;
+  font-size: 24px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  color: #f91791;
+  background-color: transparent;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 5px;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  text-align: center;
+}
+
+.pop button .gal_btn {
+  position: absolute;
+  top: 4%;
+  right: 4%;
+  cursor: pointer;
+  font-size: 24px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  color: #f91791;
+  background-color: transparent;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 5px;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  text-align: center;
+}
+
+.pop button .gal_btn:hover {
+  color: #f91791;
+  text-shadow: 1px 1px 1px #000;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.pop .closeX {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+}
+
+.pop .closeX:hover::before, .pop .closeX:hover::after {
+  background: #f91791;
+  text-shadow: 1px 1px 1px #000;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.pop .closeX::before, .pop .closeX::after {
+  content: '';
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  margin-top: -1px;
+  background: #000;
+}
+
+.pop .closeX::before {
+  transform: rotate(45deg);
+}
+
+.pop .closeX::after {
+  transform: rotate(-45deg);
+}
+
+.pop .closeX.big {
+  transform: scale(3);
+}
+
+.pop .closeX.hairline::before, .pop .closeX.hairline::after {
+  height: 1px;
+}
+
+.pop .techUsed {
+  top: 0;
+  left: 0;
+  width: 100%;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  font-size: 1.75em;
+  text-align: center;
+  color: #000;
+  -webkit-animation: 3s fade;
+  animation: 3s fade;
+}
+
+.pop .techUsed p {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  font-size: 24px;
+}
+
+.pop .techUsed h3 {
+  display: inline-block;
+  position: relative;
+  padding: .5em .5em;
+}
+
+.pop .techUsed h3:before {
+  display: block;
+  content: '';
+  width: 110%;
+  margin-left: -5%;
+  margin-bottom: 3%;
+  border-top: 1px solid #000;
+  -webkit-animation: 2.5s draw;
+  animation: 2.5s draw;
+  -moz-animation-delay: .5s;
+  -webkit-animation-delay: .5s;
+  animation-delay: .5s;
+}
+
+.pop .techUsed h3:after {
+  display: block;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  border-bottom: 1px solid #000;
+  -webkit-animation: 2.5s draw-bottom;
+  animation: 2.5s draw-bottom;
+  -moz-animation-delay: .5s;
+  -webkit-animation-delay: .5s;
+  animation-delay: .5s;
+}
+
+.pop .links {
+  margin: 20px 0 0 0;
+  text-align: center;
+}
+
+.pop .links a {
+  margin: 0 0 0 15px;
+  color: #f91791;
+}
+
+.pop .links a + a {
+  margin: 0 0 0 15px;
+  color: #f91791;
+}
+
+.pop .links a:hover {
+  color: #fff;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  opacity: 1;
+}
+
+.pop .links a:hover i {
+  color: #fff;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  opacity: 1;
+}
+
+.pop .links i {
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  opacity: 1;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 0 8px 0 0;
+}
+
+.pop i:hover, .pop .links i:hover {
+  color: #fff;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  opacity: 1;
+}
+
+@keyframes draw {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 110%;
+  }
+}
+
+@keyframes draw-bottom {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
