--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -11,8 +11,6 @@ $mainColor: #070707;
 $gray: #8c8c8c;
 $pink: #f91791;
 
-// @import "bourbon";
-
 
 @keyframes bang {
   from {
@@ -53,6 +51,294 @@ $pink: #f91791;
     }
   }
 }
+
+.pop {
+  display:none;
+  position:fixed;
+  top:10%;
+  left:10%;
+  width:80%;
+  height:85%;
+  background: #fff;
+  outline:1px solid #000;
+  z-index: 999;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  &::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFF;
+    z-index: -1;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+  }
+  &::after{
+    position: fixed;
+    content: "";
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -2;
+    height: 2000px;
+    width: 100%;
+    margin-top: -340px;
+    margin-bottom: -1000px;
+    background: #000;
+    opacity: 0.7;
+  }
+  > {
+    h6 {
+      padding: 50px 30px 20px 30px;
+      color: #f91791;
+      font-size: 50px;
+      text-align: center;
+    }
+    p {
+      margin: 20px;
+      color: #000;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 100;
+      font-size: 20px;
+      line-height: 28px;
+      text-align: center;
+      &strong{
+        color: #f91791;
+
+      }
+    }
+  }
+  button {
+    &.gal_btn {
+      position: absolute;
+      top: 4%;
+      right: 4%;
+      cursor: pointer;
+      font-size: 24px;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
+      border-radius: 50%;
+      border: 2px solid transparent;
+      color: #f91791;
+      background-color: transparent;
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      padding: 0 5px;
+      -moz-transition: all 0.25s ease-in-out;
+      -o-transition: all 0.25s ease-in-out;
+      -webkit-transition: all 0.25s ease-in-out;
+      transition: all 0.25s ease-in-out;
+      text-align: center;
+    }
+    .gal_btn {
+      position: absolute;
+      top: 4%;
+      right: 4%;
+      cursor: pointer;
+      font-size: 24px;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
+      border-radius: 50%;
+      border: 2px solid transparent;
+      color: #f91791;
+      background-color: transparent;
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      padding: 0 5px;
+      -moz-transition: all 0.25s ease-in-out;
+      -o-transition: all 0.25s ease-in-out;
+      -webkit-transition: all 0.25s ease-in-out;
+      transition: all 0.25s ease-in-out;
+      text-align: center;
+      &:hover {
+        color: #f91791;
+        text-shadow: 1px 1px 1px #000;
+        -moz-transition: all 0.25s ease-in-out;
+        -o-transition: all 0.25s ease-in-out;
+        -webkit-transition: all 0.25s ease-in-out;
+        transition: all 0.25s ease-in-out;
+      }
+    }
+  }
+  .closeX {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    &:hover {
+      &::before, &::after {
+        background: #f91791;
+        text-shadow: 1px 1px 1px #000;
+        -moz-transition: all 0.25s ease-in-out;
+        -o-transition: all 0.25s ease-in-out;
+        -webkit-transition: all 0.25s ease-in-out;
+        transition: all 0.25s ease-in-out;
+      }
+    }
+    &::before, &::after {
+      content: '';
+      position: absolute;
+      height: 2px;
+      width: 100%;
+      top: 50%;
+      left: 0;
+      margin-top: -1px;
+      background: #000;
+    }
+    &::before {
+      transform: rotate(45deg);
+    }
+    &::after {
+      transform: rotate(-45deg);
+    }
+    &.big {
+      transform: scale(3);
+    }
+    &.hairline {
+      &::before, &::after {
+        height: 1px;
+      }
+    }
+  }
+
+  .techUsed {
+    top: 0;
+    left: 0;
+    width: 100%;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100;
+    font-size: 1.75em;
+    text-align: center;
+    color: #000;
+    -webkit-animation: 3s fade;
+    animation: 3s fade;
+    p {
+      font-family: 'Raleway', sans-serif;
+      font-weight: 100;
+      font-size: 24px;
+    }
+    h3 {
+      display: inline-block;
+      position: relative;
+      padding: .5em .5em;
+      &:before {
+        display: block;
+        content: '';
+        width: 110%;
+        margin-left: -5%;
+        margin-bottom: 3%;
+        border-top: 1px solid #000;
+        -webkit-animation: 2.5s draw;
+        animation: 2.5s draw;
+        -moz-animation-delay: .5s;
+        -webkit-animation-delay: .5s;
+        animation-delay: .5s;
+      }
+      &:after {
+        display: block;
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        border-bottom: 1px solid #000;
+        -webkit-animation: 2.5s draw-bottom;
+        animation: 2.5s draw-bottom;
+        -moz-animation-delay: .5s;
+        -webkit-animation-delay: .5s;
+        animation-delay: .5s;
+      }
+    }
+  }
+
+  .links {
+    margin: 20px 0 0 0;
+    text-align: center;
+    a {
+      margin: 0 0 0 15px;
+      color: #f91791;
+      + a {
+        margin: 0 0 0 15px;
+        color: #f91791;
+      }
+      &:hover {
+        color: #fff;
+        -moz-transition: all 0.5s;
+        -o-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+        opacity: 1;
+        i {
+          color: #fff;
+          -moz-transition: all 0.5s;
+          -o-transition: all 0.5s;
+          -webkit-transition: all 0.5s;
+          transition: all 0.5s;
+          opacity: 1;
+        }
+      }
+    }
+    i {
+      -moz-transition: all 0.5s;
+      -o-transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+      opacity: 1;
+      font-size: 18px;
+      cursor: pointer;
+      margin: 0 8px 0 0;
+    }
+  }
+
+  i:hover, .links i:hover {
+    color: #fff;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    opacity: 1;
+  }
+}
+
+@keyframes draw {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 110%;
+  }
+}
+@keyframes draw-bottom {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 //
 // #about{
 // 	float: left;
