--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -52,6 +52,273 @@ $pink: #f91791;
   }
 }
 
+// #resume {
+//
+// 	div.holder {
+//
+// 		div.title {
+//
+// 			h2 {
+//
+// 			}
+// 		}
+//
+// 		div.toggles {
+//
+// 			button.current {
+//
+// 			}
+//
+// 			button.button {
+//
+// 			}
+// 		}
+// 	}
+//
+// 	.grid {
+//     &:after {
+//     content: '';
+//     display: block;
+//     clear: both;
+//   }
+//
+// 		.grid-sizer {
+//       width: 30%;
+// 		}
+//     .grid-item {
+//       width: 30%;
+//       img {
+//         display: block;
+//         max-width: 100%;
+//       }
+//       &:hover {}
+//       img:hover {
+//         opacity: 0.4;
+//         filter: alpha(opacity = 40);
+//       }
+//       .project_info {
+//         width: 100%;
+//         height: 100%;
+//         font-family: "Abril Fatface", serif;
+//         font-size: 50px;
+//         color: #000;
+//         padding-top: 80px;
+//         background: #f91791;
+//         position: absolute;
+//         opacity: 0;
+//         -moz-transition: all 0.25s ease-in-out;
+//         -o-transition: all 0.25s ease-in-out;
+//         -webkit-transition: all 0.25s ease-in-out;
+//         transition: all 0.25s ease-in-out;
+//         overflow: hidden;
+//
+// 				div.space20 {
+//
+// 				}
+//
+// 				button.gal_btn {
+//           font-family: 'Abril Fatface', serif;
+//           -moz-border-radius: 3px;
+//           -webkit-border-radius: 3px;
+//           border-radius: 3px;
+//           text-decoration: none;
+//           height: 45px;
+//           line-height: 47px;
+//           padding: 0 25px;
+//           display: inline-block;
+//           text-transform: uppercase;
+//           position: relative;
+//           overflow: hidden;
+//           font-size: 18px;
+//           text-align: center;
+//           cursor: pointer;
+//           &:hover {
+//             border: 1px solid #000;
+//             -moz-transition: all 0.5s ease-in-out;
+//             -o-transition: all 0.5s ease-in-out;
+//             -webkit-transition: all 0.5s ease-in-out;
+//             transition: all 0.5s ease-in-out;
+//             opacity: 1;
+//           }
+//
+// 				}
+// 			}
+//     }
+// 	}
+// }
+
+#resume {
+  background-color: #fff;
+  padding: 80px 0 210px 0;
+  text-align: center;
+  position: relative;
+
+	.holder {
+    max-width: 1000px;
+    margin: 0 auto;
+
+		.title {
+
+			h2 {
+        &:after {
+          	background-color: #f91791;
+        }
+			}
+		}
+		div {
+			button.current {
+        background: #f91791;
+        color: #fff;
+			}
+      button {
+        font-family: "Abril Fatface", serif;
+        background-color: #fff;
+        color: #000;
+        border: 1px solid #f91791;
+        -moz-border-radius: 3px;
+        -webkit-border-radius: 3px;
+        border-radius: 3px;
+        text-decoration: none;
+        height: 45px;
+        line-height: 47px;
+        min-width: 130px;
+        display: inline-block;
+        text-transform: uppercase;
+        position: relative;
+        z-index: 0;
+        overflow: hidden;
+        font-size: 18px;
+        text-align: center;
+        cursor: pointer;
+        &:before {
+          opacity: 0;
+          background: #f91791;
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 150%;
+          height: 100%;
+          -moz-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+          -ms-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+          -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+          transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+          -moz-transition: -moz-transform 0.4s, opacity 0.4s, background-color 0.4s;
+          -o-transition: -o-transform 0.4s, opacity 0.4s, background-color 0.4s;
+          -webkit-transition: -webkit-transform 0.4s, opacity 0.4s, background-color 0.4s;
+          transition: transform 0.4s, opacity 0.4s, background-color 0.4s;
+          -moz-transform-origin: 0% 100%;
+          -ms-transform-origin: 0% 100%;
+          -webkit-transform-origin: 0% 100%;
+          transform-origin: 0% 100%;
+          z-index: -1;
+        }
+        &:hover {
+          background: #f91791;
+          color: #fff;
+          -moz-transition: all 0.5s;
+          -o-transition: all 0.5s;
+          -webkit-transition: all 0.5s;
+          transition: all 0.5s;
+          opacity: 1;
+        }
+      }
+		}
+	}
+.grid {
+  margin-top: 50px;
+  &:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+  .grid-sizer {
+    width: 30%;
+  }
+  .grid-item {
+      width: 30%;
+    img {
+      display: block;
+      max-width: 100%;
+    }
+    &:hover {}
+    img:hover {
+      opacity: 0.4;
+      filter: alpha(opacity = 40);
+
+    }
+    button {
+      font-family: 'Abril Fatface', serif;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+      text-decoration: none;
+      height: 45px;
+      line-height: 47px;
+      padding: 0 25px;
+      display: inline-block;
+      text-transform: uppercase;
+      position: relative;
+      overflow: hidden;
+      font-size: 18px;
+      text-align: center;
+      cursor: pointer;
+      &:hover {
+        border: 1px solid #000;
+        -moz-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        -webkit-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+        opacity: 1;
+      }
+    }
+  }
+  .gallery_container {
+    display: inline-flex;
+    width: 400px;
+    height: 300px;
+    margin: 10px;
+    position: relative;
+    border: 1px solid #000;
+    img {
+      width: 100%;
+      height: 100%;
+      outline: 1px solid #000;
+      box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+    }
+    .project_info {
+      width: 100%;
+      height: 100%;
+      font-family: "Abril Fatface", serif;
+      font-size: 50px;
+      color: #000;
+      padding-top: 80px;
+      background: #f91791;
+      position: absolute;
+      opacity: 0;
+      -moz-transition: all 0.25s ease-in-out;
+      -o-transition: all 0.25s ease-in-out;
+      -webkit-transition: all 0.25s ease-in-out;
+      transition: all 0.25s ease-in-out;
+      overflow: hidden;
+      &:hover {
+        opacity: 0.9;
+      }
+      span {
+        display: block;
+        font-size: 16px;
+      }
+      .space20 {
+
+      }
+
+    }
+  }
+}
+}
+
+
+
 .pop {
   display:none;
   position:fixed;
@@ -822,169 +1089,8 @@ $pink: #f91791;
 // 				}
 // 			}
 //
-// 			.pop {
-//
-// 				.gal_btn {
-// 					position:absolute;
-// 					top:4%;
-// 					right:4%;
-// 					cursor:pointer;
-// 					font-size: 24px;
-// 					-moz-border-radius: 50%;
-// 					-webkit-border-radius: 50%;
-// 					border-radius: 50%;
-// 					border: 2px solid #f91791;
-// 					display: inline-block;
-// 					width: 55px;
-// 					height: 55px;
-// 					line-height: 55px;
-// 					padding: 0 5px;
-// 					-moz-transition: all 0.25s ease-in-out;
-// 					-o-transition: all 0.25s ease-in-out;
-// 					-webkit-transition: all 0.25s ease-in-out;
-// 					transition: all 0.25s ease-in-out;
-// 					color: #f91791;
-// 					text-align: center;
-// 					&:hover{
-// 						background:  #f91791;
-// 						color: #fff;
-// 						text-shadow: 1px 1px 1px #000;
-// 						-moz-transition: all 0.25s ease-in-out;
-// 						-o-transition: all 0.25s ease-in-out;
-// 						-webkit-transition: all 0.25s ease-in-out;
-// 						transition: all 0.25s ease-in-out;
-// 					}
-//
-// 				}
-//
-// 				h6 {
-// 					padding:50px 30px 20px 30px;
-// 					color: #f91791;
-// 					font-size:50px;
-//
-// 				}
-//
-// 				.techUsed {
-// 					/*position: absolute;*/
-// 					top: 0;
-// 					left: 0;
-// 					width: 100%;
-// 					font-family: 'Raleway', sans-serif;
-// 					font-weight: 100;
-// 					font-size: 1.75em;
-// 					text-align: center;
-// 					color: #000;
-// 					-webkit-animation: 3s fade;
-// 					animation: 3s fade;
-//
-// 					h3 {
-// 						display: inline-block;
-// 						position: relative;
-// 						padding: .5em .5em;
-// 						&::before{
-// 							display: block;
-// 							content: '';
-// 							width: 110%;
-// 							margin-left: -5%;
-// 							margin-bottom: 5%;
-// 							border-top: 1px solid #000;
-// 							-webkit-animation: 2.5s draw;
-// 							animation: 2.5s draw;
-// 							-moz-animation-delay: .5s;
-// 							-webkit-animation-delay: .5s;
-// 							animation-delay: .5s;
-// 						}
-// 						&::after{
-// 							display: block;
-// 							content: '';
-// 							position: absolute;
-// 							bottom: 0;
-// 							right: 0;
-// 							width: 100%;
-// 							border-bottom: 1px solid #000;
-// 							-webkit-animation: 2.5s draw-bottom;
-// 							animation: 2.5s draw-bottom;
-// 							-moz-animation-delay: .5s;
-// 							-webkit-animation-delay: .5s;
-// 							animation-delay: .5s;
-// 						}
-//
-// 						strong {
-//
-// 						}
-// 					}
-// 				}
-//
-// 				p {
-//
-// 					strong {
-//
-// 					}
-// 				}
-//
-// 				.links {
-//
-// 					.button {
-//
-// 						.fa {
-//
-// 						}
-// 					}
-// 				}
-// 			}
-// 		}
-//
-// 		.marketing {
-//
-// 			img {
-//
-// 			}
-//
-// 			.project_info {
-//
-// 				br {
-//
-// 				}
-//
-// 				.space20 {
-//
-// 				}
-//
-// 				.gal_btn {
-//
-// 				}
-// 			}
-//
-// 			.pop {
-//
-// 				.gal_btn {
-//
-// 				}
-//
-// 				h6 {
-//
-// 				}
-//
-// 				p {
-//
-// 				}
-//
-// 				.links {
-//
-// 					.button {
-//
-// 						.fa {
-//
-// 						}
-// 					}
-// 				}
-// 			}
-// 		}
-// 	}
-// }
-//
-//
-//
+
+
 //
 //
 //
